--- a/mj/frameworks/runtime-src/proj.android/app/src/main/AndroidManifest.xml
+++ b/mj/frameworks/runtime-src/proj.android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
 
     <application android:label="@string/app_name"
                  android:icon="@drawable/icon">
-					  
+
+        <meta-data android:name="android.max_aspect" android:value="2.3" />
+
 		<activity android:name="org.cocos2dx.lua.AppActivity"
 			android:label="@string/app_name"
 			android:screenOrientation="sensorLandscape"
