--- a/mj/frameworks/runtime-src/proj.android/app/src/main/AndroidManifest.xml
+++ b/mj/frameworks/runtime-src/proj.android/app/src/main/AndroidManifest.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.xt.mj"
-      android:versionCode="1"
-      android:versionName="1.0"
-      android:installLocation="auto">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.xt.mj"
+    android:versionCode="1"
+    android:versionName="1.0"
+    android:installLocation="auto">
 
     <uses-feature android:glEsVersion="0x00020000" />
 
-    <application android:label="@string/app_name"
-                 android:icon="@drawable/icon">
+    <application
+        android:label="@string/app_name"
+        android:icon="@drawable/icon"
+        android:supportsRtl="false">
 
         <meta-data android:name="android.max_aspect" android:value="2.3" />
 
