--- a/mj/frameworks/runtime-src/proj.android/app/build.gradle
+++ b/mj/frameworks/runtime-src/proj.android/app/build.gradle
@@ -15,6 +15,7 @@ android {
         ndk {
             abiFilters "armeabi-v7a"
         }
+        flavorDimensions "default"
     }
 
     signingConfigs {
@@ -52,6 +53,20 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    //添加渠道配置
+    productFlavors {
+        triangle {}
+    }
+    productFlavors.all {
+        flavor -> flavor.manifestPlaceholders = [UMENG_CHANNEL_VALUE: name]
+    }
+
+    android.applicationVariants.all { variant ->
+        variant.outputs.all {
+            outputFileName = "mj_${variant.productFlavors[0].name}_v${variant.versionName}.apk"
+        }
     }
 
     packagingOptions {
